# doodl

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  npm-angular-wrapper.yml  publish-to-pypi-flit.yml
doodl/: README.md  __init__.py  __main__.py  doodl  doodl.py  pyproject.toml  requirements.txt
doodl/.ipynb_checkpoints/: notebook1-checkpoint.ipynb
doodl/css/: menu.css
doodl/docs/: Dockerfile  color.md  docker-compose.yaml  index.md  markdown.md  package-lock.json  package.json
doodl/doodl/: __init__.py  data.py  doodl.py  requirements.txt
doodl/ts/: index.ts  rollup.config.js
examples/: chord.md  contour.md  report.docx  report.md  test-radial.md  test.docx  test.html  test.md  test.pptx  test2.docx  test2.md  test_radial.md  venn.md  xy.csv
examples/data/: bollinger_50.json  chord-example.json  label_category_value.json  label_group_value.json  std_focus.json  xy2.csv
examples/defns/: boll2.json  boll3.json  defn.json  happy.js  happy_defn.json
examples/notebooks/: Contour.ipynb  CustomCharts.ipynb  TestNotebook.ipynb  TestNotebook_dev-Copy1.ipynb  TestNotebook_dev.ipynb  TestNotebook_prod.ipynb  Venn.ipynb  pie.json
glasseye/: glasseye  requirements.txt
glasseye/css/: glasseyeCharts.css
glasseye/docs/: color.md  history.md  index.md  invoking.md  markdown.md  package-lock.json  package.json  pandoc-plot.md
glasseye/ts/: package-lock.json  rollup.config.js  tsconfig.json
web/css/: doodl.css
web/docs/: Dockerfile  color.md  docs.md  get-started.md  history.md  index.md  invoking.md  markdown.md  privacy.md  (+3 more)
(+147 files in other folders)
