[project]
name = "doodl"
version = "0.9.1"
description = "A python module for including beautiful charts in Markdown for conversion to HTML"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "doodl.ai", email = "info@doodl.ai"}
]
dependencies = [
    'pypandoc', 'beautifulsoup4', 'seaborn','colorcet','playwright', 'requests'
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"